k8s/flask-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  labels:
    name: flask-app-service
    app: flask
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5002
  selector:
    name: flask-app-pod
    app: flask
